hphp/hack/test/typecheck/expression_trees/invalid_operator.php.exp
File "invalid_operator.php", line 78, characters 13-18:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 81, characters 13-22:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 82, characters 13-21:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 85, characters 13-20:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 88, characters 13-36:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 91, characters 22-39:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 92, characters 22-50:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 95, characters 18-19:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 98, characters 32-36:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 99, characters 32-38:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 102, characters 28-34:
Unsupported syntax for expression trees. (Parsing[1002])
